--- a/package.json
+++ b/package.json
@@ -5,21 +5,28 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@googlemaps/js-api-loader": "^1.11.4",
     "@react-google-maps/api": "^2.2.0",
     "firebase": "^8.6.8",
+    "jest": "^27.0.5",
+    "js-stats": "^1.0.5",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.35.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
     "@types/react": "^17.0.11",
     "typescript": "^4.3.4"
   }
