--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^27.0.5",
     "js-stats": "^1.0.5",
     "next": "11.0.0",
+    "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.35.1"
