--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "11.0.0",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
     "react-markdown": "^6.0.2",
     "sass": "^1.35.1"
