--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@googlemaps/js-api-loader": "^1.11.4",
     "@react-google-maps/api": "^2.2.0",
+    "chart.js": "^3.4.1",
     "firebase": "^8.6.8",
     "jest": "^27.0.5",
     "js-stats": "^1.0.5",
